@@ -169,6 +169,7 @@ static struct quake_private quake4_private;
 static struct quake_private etqw_private;
 static struct quake_private warsow_private;
 static struct quake_private tremulous_private;
+static struct quake_private openarena_private;
 
 #include "games.c"
 
