@@ -480,6 +480,17 @@ static struct q3_common_prefs_s tremulous_prefs =
   defproto : "69",
 };
 
+static const char* openarena_masterprotocols[] = {
+	"auto",
+	"70 - v0.8.0",
+	NULL
+};
+
+static struct q3_common_prefs_s openarena_prefs =
+{
+  protocols: openarena_masterprotocols,
+  defproto : "70",
+};
 
 static struct q3_common_prefs_s* get_pref_widgets_for_game(enum server_type type);
 
@@ -3114,6 +3125,7 @@ static struct q3_common_prefs_s* get_pref_widgets_for_game(enum server_type type
     case NEXUIZ_SERVER: return &nexuiz_prefs;
     case WARSOW_SERVER: return &warsow_prefs;
     case TREMULOUS_SERVER: return &tremulous_prefs;
+    case OPENARENA_SERVER: return &openarena_prefs;
     default: xqf_error("need to define preferences"); return NULL;
   }
 }
@@ -4678,6 +4690,7 @@ static struct generic_prefs* new_generic_prefs (void) {
   new_genprefs[NEXUIZ_SERVER].add_options_to_notebook = add_q3_options_to_notebook;
   new_genprefs[WARSOW_SERVER].add_options_to_notebook = add_q3_options_to_notebook;
   new_genprefs[TREMULOUS_SERVER].add_options_to_notebook = add_q3_options_to_notebook;
+  new_genprefs[OPENARENA_SERVER].add_options_to_notebook = add_q3_options_to_notebook;
 
   for (i = 0; i < GAMES_TOTAL; i++) {
     new_genprefs[i].pref_dir = g_strdup (games[i].dir);
