@@ -250,3 +250,18 @@ gametype PREYM new extend DM3M
     master for gametype = PREYS
 end
 
+gametype OPENARENAS new extend Q3S
+    name = OpenArena
+    template var = OPENARENA
+    game rule = gamename
+end
+
+gametype OPENARENAM new extend Q3M
+    name = OpenArena Master
+    template var = OPENARENAMASTER
+    default port = 27950
+    master packet = \377\377\377\377getservers %s %s
+    master protocol = 70
+    master query = empty full
+    master for gametype = OPENARENAS
+end
