@@ -136,6 +136,7 @@ enum server_type {
   NEXUIZ_SERVER,
   WARSOW_SERVER,
   TREMULOUS_SERVER,
+  OPENARENA_SERVER,
   OTTD_SERVER,
   GPS_SERVER,
   UNKNOWN_SERVER
