@@ -1,3 +1,6 @@
+Sep 13, 2008: Ludwig Nussel <l-n@users.sourceforge.net>
+- add OpenArena as separate game
+
 Jan 13, 2008: Ludwig Nussel <l-n@users.sourceforge.net>
 - add master for OpenArena (#1869975)
 - add support for OpenTTD (#1254682)
